crates/etas_tests/fixtures/compiler/projects/negative/missing_exported_item/src/app/main.es
module app.main;

import app.util.{missing};

flow main(args: Array<string>) -> i32 {
    return 0;
}
